<resources>
    <string name="app_name">Budget</string>
    <string name="budget_overview_button">Budget Overview</string>
    <string name="add_bill">Add Bill</string>
    <string name="delete_bill">Delete Bill</string>
    <string name="name">Name:</string>
    <string name="amount">Amount:</string>
    <string name="monthly_due_date">Monthly Due Date:</string>
    <string name="form_add_title">Add A Bill</string>
    <string name="form_delete_title">Delete A Bill</string>
</resources>
